Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-6430

Crash after selecting context menu "Open Memory Editor at Value of Register .."

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • Qt Creator 2.4.0
    • Qt Creator 2.3.1, Qt Creator 2.4.0
    • Debugger
    • None
    • Windows 7 / 64.
    • 239e7739d3218cb7c9059ca46ee37044150233d8

    Description

      After selecting context menu "Open Memory Editor at Value of Register .." in Register window, the program crashes both in "Operating by Instructions" and in operating by commands.
      Qt Creator 2.3.1 under Windows 7/64.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            y_dima Dmytro
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes