debgugger: fix crash when opening memory editor through register values

Task-number: QTCREATORBUG-6430
Change-Id: I92edba9e4564bbdff6babc548d49e9ba36bc3b77
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>